penambahan section porto dan why hire me

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
           <ul>
             <li><a href="#hero">Beranda</a></li>
             <li><a href="#about">Tentang Saya</a></li>
-            <li><a href="">Social Media</a></li>
-            <li><a href="">Portofolio</a></li>
-            <li><a href="">Why Hire Me</a></li>
-            <li><a href="">Testimoni</a></li>
+            <li><a href="#social-media">Social Media</a></li>
+            <li><a href="#portofolio">Portofolio</a></li>
+            <li><a href="#why-hire-me">Why Hire Me</a></li>
+            <li><a href="#testimoni">Testimoni</a></li>
           </ul>
         </div>
         <div class="button">
@@ -60,10 +60,10 @@
             <ul>
               <li><a href="#hero">Beranda</a></li>
               <li><a href="#about">Tentang Saya</a></li>
-              <li><a href="">Social Media</a></li>
-              <li><a href="">Portofolio</a></li>
-              <li><a href="">Why Hire Me</a></li>
-              <li><a href="">Testimoni</a></li>
+              <li><a href="#social-media">Social Media</a></li>
+              <li><a href="#portofolio">Portofolio</a></li>
+              <li><a href="#why-hire-me">Why Hire Me</a></li>
+              <li><a href="#testimoni">Testimoni</a></li>
               <li class="contact-me"><a href="">Kontak Saya</a></li>
             </ul>
           </div>
@@ -85,7 +85,7 @@
           <div>
             <ul class="action-button">
               <li class="lihat-portofolio">
-                <a class="" href="">Lihat Portofolio Saya</a>
+                <a  href="#portofolio">Lihat Portofolio Saya</a>
               </li>
               <li class="hire-me"><a href="">Hire me</a></li>
             </ul>
@@ -96,53 +96,156 @@
         </div>
       </section>
 
-      <section id="about">
-        <div>
-          <h1>Tentang <span style="color: black">Saya</span></h1>
-          <div class="paragaf">
-            <p>
-              Halo! Saya Muzakir. Saat ini saya sedang menempuh studi Teknik
-              Informatika di Universitas Prima Indonesia (UNPRI) semester 3.
-              Ketertarikan saya pada dunia Fullstack Development berawal dari
-              rasa penasaran tentang bagaimana sebuah website bekerja di balik
-              layar.
-            </p>
-            <p>
-              Sambil kuliah, saya aktif mendalami ekosistem frontend dan backend
-              untuk menciptakan aplikasi yang tidak hanya punya performa
-              kencang, tapi juga nyaman digunakan. Saya percaya bahwa kombinasi
-              antara teori kampus dan eksplorasi kode adalah kunci untuk
-              membangun solusi digital yang bermakna.
-            </p>
-          </div>
-        </div>
-      </section>
+     <section id="about">
+  <div>
+    <h1>Tentang <span style="color: black">Saya</span></h1>
+    <p class="subtitle">
+      Mengenal lebih dekat latar belakang, minat, dan perjalanan saya di dunia pengembangan web.
+    </p>
+
+    <div class="paragaf">
+      <p>
+        Halo! Saya <strong>Muzakir</strong>, mahasiswa Teknik Informatika semester 3
+        di Universitas Prima Indonesia (UNPRI). Ketertarikan saya pada dunia
+        Fullstack Development berawal dari rasa ingin tahu tentang bagaimana
+        sebuah website bekerja, mulai dari tampilan hingga proses di balik layar.
+      </p>
+      <p>
+        Di samping perkuliahan, saya aktif mengeksplorasi teknologi frontend dan
+        backend untuk membangun aplikasi yang tidak hanya cepat dan stabil,
+        tetapi juga memberikan pengalaman pengguna yang optimal. Saya percaya
+        bahwa perpaduan antara teori akademik dan praktik langsung adalah kunci
+        dalam menciptakan solusi digital yang bernilai.
+      </p>
+    </div>
+  </div>
+</section>
+
 
       <section id="social-media">
-        <div>
-          <h1>Sosial <span style="color: black">Media</span></h1>
-        </div>
-        <div class="card-content">
-          <a href="https://www.instagram.com/kir_genio/">
-            <img src="src/img/ig.png" alt="instagram"  />
-          </a>
-          <a href="https://github.com/cykir">
-            <img src="src/img/github.png" alt="github"  />
-          </a>
-          <a href="https://www.linkedin.com/in/muzakir-66818229b/">
-            <img src="src/img/linkedin.png" alt="linkedin"  />
-          </a>
-          <a href="https://wa.me/+6282274307291">
-            <img src="src/img/whatsapp.png" alt="whatsapp"  />
-          </a>
-        </div>
-      </section>
+  <div>
+    <h1>Sosial <span style="color: black">Media</span></h1>
+    <p class="subtitle">
+      Terhubung dengan saya melalui berbagai platform untuk melihat aktivitas, karya, dan perjalanan profesional saya.
+    </p>
+  </div>
 
-      <section id="portofolio">
-        <div>
-          <h1>Portofolio <span style="color: black">Saya</span></h1>
-        </div>
-      </section>
+  <div class="icon-img">
+    <a href="https://www.instagram.com/kir_genio/">
+      <img src="src/img/ig.png" alt="instagram" />
+    </a>
+    <a href="https://github.com/cykir">
+      <img src="src/img/github.png" alt="github" />
+    </a>
+    <a href="https://www.linkedin.com/in/muzakir-66818229b/">
+      <img src="src/img/linkedin.png" alt="linkedin" />
+    </a>
+    <a href="https://wa.me/+6282274307291">
+      <img src="src/img/whatsapp.png" alt="whatsapp" />
+    </a>
+  </div>
+</section>
+
+
+     <section id="portofolio">
+  <div>
+    <h1>Portofolio <span style="color: black">Saya</span></h1>
+    <p class="subtitle">
+      Kumpulan proyek yang merepresentasikan kemampuan teknis, kreativitas, dan pengalaman saya dalam pengembangan aplikasi web.
+    </p>
+  </div>
+
+  <div class="porto">
+    <div class="card">
+      <div class="card-img">
+        <img src="src/img/porto1.png" alt="Portofolio 1" />
+      </div>
+      <div class="card-content">
+        <h3>Modern E-Commerce Platform</h3>
+        <p>
+          Platform e-commerce modern yang menghubungkan penjual dan pembeli dalam
+          satu ekosistem digital. Dilengkapi dengan katalog produk interaktif,
+          keranjang belanja responsif, serta sistem pembayaran yang aman dan
+          terintegrasi.
+        </p>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-img">
+        <img src="src/img/porto2.png" alt="Portofolio 2" />
+      </div>
+      <div class="card-content">
+        <h3>Integrated Point of Sale System</h3>
+        <p>
+          Sistem Point of Sale (POS) terintegrasi untuk mendukung operasional toko
+          fisik, dengan fitur manajemen inventaris, laporan penjualan real-time,
+          dan pengelolaan data pelanggan secara efisien.
+        </p>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-img">
+        <img src="src/img/porto3.png" alt="Portofolio 3" />
+      </div>
+      <div class="card-content">
+        <h3>Professional Company Profile Website</h3>
+        <p>
+          Website company profile profesional yang dirancang untuk menampilkan
+          identitas bisnis, layanan, dan portofolio perusahaan secara menarik,
+          dengan desain responsif dan performa yang optimal.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id="why-hire-me">
+  <div>
+    <h1>Why <span style="color:black">Hire Me</span></h1>
+    <p class="subtitle">
+      Beberapa alasan mengapa saya dapat menjadi partner yang tepat dalam
+      pengembangan solusi digital.
+    </p>
+
+    <div class="why-wrapper">
+      <div class="why-item">
+        <h3>Strong Technical Foundation</h3>
+        <p>
+          Memiliki dasar yang kuat dalam pengembangan frontend dan backend,
+          serta pemahaman logika pemrograman yang terus diasah melalui praktik.
+        </p>
+      </div>
+
+      <div class="why-item">
+        <h3>Clean & Maintainable Code</h3>
+        <p>
+          Mengutamakan kode yang rapi, terstruktur, dan mudah dikembangkan
+          agar aplikasi tetap scalable dan mudah dirawat.
+        </p>
+      </div>
+
+      <div class="why-item">
+        <h3>User-Oriented Development</h3>
+        <p>
+          Fokus pada pengalaman pengguna dengan memastikan aplikasi
+          mudah digunakan, responsif, dan nyaman di berbagai perangkat.
+        </p>
+      </div>
+
+      <div class="why-item">
+        <h3>Continuous Learner</h3>
+        <p>
+          Selalu terbuka mempelajari teknologi baru dan mengikuti tren industri
+          untuk menghasilkan solusi yang relevan dan modern.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
+
     </main>
 
     <footer></footer>
