--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     />
 
     <meta name="theme-color" content="#344c36" />
-    <link rel="icon" href="src/img/favicon.png" type="image/png" />
-    <link rel="apple-touch-icon" href="src/img/favicon.png" />
-
+    <link rel="icon" type="image/png" href="src/img/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="src/img/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="src/img/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="src/img/favicon/apple-touch-icon.png" />
+    <link rel="manifest" href="src/img/favicon/site.webmanifest" />
 
     <meta property="og:title" content="Muzakir | Fullstack Developer" />
     <meta
