--- a/index.html
+++ b/index.html
@@ -9,12 +9,20 @@
       name="description"
       content="Portofolio Muzakir, Mahasiswa Teknik Informatika UNPRI Medan dan Fullstack Developer Berbakat."
     />
-
     <meta name="theme-color" content="#344c36" />
-    <link rel="icon" type="image/png" href="src/img/favicon/favicon-96x96.png" sizes="96x96" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="src/img/favicon/favicon-96x96.png"
+      sizes="96x96"
+    />
     <link rel="icon" type="image/svg+xml" href="src/img/favicon/favicon.svg" />
     <link rel="shortcut icon" href="src/img/favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="src/img/favicon/apple-touch-icon.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="src/img/favicon/apple-touch-icon.png"
+    />
     <link rel="manifest" href="src/img/favicon/site.webmanifest" />
 
     <meta property="og:title" content="Muzakir | Fullstack Developer" />
