Update 'Hire me' link to point to '#why-hire-me'

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               <li class="lihat-portofolio">
                 <a href="#portofolio">Lihat Portofolio Saya</a>
               </li>
-              <li class="hire-me"><a href="">Hire me</a></li>
+              <li class="hire-me"><a href="#why-hire-me">Hire me</a></li>
             </ul>
           </div>
         </div>
