--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <nav class="nav-desktop">
         <div class="logo">
           <ul>
-            <li><a href="#">CYkir</a></li>
+            <li><a href="#hero">CYkir</a></li>
           </ul>
         </div>
 
@@ -69,7 +69,7 @@
       <nav class="nav-mobile">
         <div class="mobile-header">
           <div class="logo">
-            <a href="">CYkir</a>
+            <a href="#hero">CYkir</a>
           </div>
 
           <input type="checkbox" id="check" />
